Improved user experience in terms of policies in Harden System Security
* Updated dependencies to the latest versions.

* To address [an issue](https://github.com/HotCakeX/Harden-Windows-Security/issues/952), changed the "Boot-Start Driver Initialization Policy" to "Good and Unknown" instead of "Good only" in the [Miscellaneous configurations category](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Miscellaneous-Configurations).

    * Added a new sub-category that will set it to "Good only". As with all sub-categories, this will not be applied by default when you apply the Miscellaneous category and you will have to check an extra box to apply it. This is to prevent flawed 3rd party drivers from causing boot issues.

   * The "Good and Unknown" policy applies to all device usage intents now.

   * The "Good only" policy applies to the "Business", "Specialized Access Workstation" and "Privileged Access Workstation" device usage intents.

* Added a new toggle button to the [Microsoft Security Baselines page](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Microsoft-Security-Baselines), **it is on/toggled by default**. This toggle will apply the [Optional Overrides](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Overrides-for-Microsoft-Security-Baseline) that are recommended for enhanced user experience when using the Microsoft Security Baselines.

   * The reason for this change is that users usually apply the Microsoft Security Baseline on their system, which is mostly geared towards enterprise use, but then they find that some settings are not user-friendly for personal use. These optional overrides help to mitigate that situation. You can of course disable this toggle if you want to stick strictly to the Microsoft Security Baseline without any modifications.

* [Fixes this issue](https://github.com/HotCakeX/Harden-Windows-Security/issues/953) by adding a new policy to the [Optional Overrides](https://github.com/HotCakeX/Harden-Windows-

--- a/Harden System Security/Strings/AR/Resources.resw
+++ b/Harden System Security/Strings/AR/Resources.resw
@@ -4895,5 +4895,21 @@
   <data name="OptionalWindowsFeatures_IncludeEnablements" xml:space="preserve">
     <comment>Protection Sub-Category</comment>
     <value>بالإضافة إلى الميزات والقدرات الموصى بإزالتها، ضمّن أيضًا تلك الموصى بتمكينها.</value>
-  </data>  
+  </data>
+    <data name="ProtectSubCategory_MiscellaneousConfigurations_DriverLoadPolicyGoodOnly" xml:space="preserve">
+    <comment>Protection Sub-Category</comment>
+    <value>السماح فقط بتحميل برامج تشغيل وضع النواة Good لتحسين الأمان.</value>
+  </data>
+  <data name="MiscellaneousConfigurations_MiscellaneousConfigurations_DriverLoadPolicyGoodOnly" xml:space="preserve">
+    <value>قد تكون برامج مكافحة الفيروسات التابعة لجهات خارجية أو أنواع أخرى من برامج تشغيل الجهات الخارجية غير متوافقة. في حالة عدم التوافق، سيواجه النظام مشكلة في التمهيد.</value>
+  </data>
+  <data name="ApplyBaselineOverridesToggleMenuFlyoutItem.Text" xml:space="preserve">
+    <value>تطبيق التجاوزات الاختيارية</value>
+  </data>
+  <data name="ApplyBaselineOverridesToggleMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>يوصى بشدة بتطبيق هذه التجاوزات الاختيارية لتحسين تجربة المستخدم عند استخدام خطوط أساس الأمان من Microsoft.</value>
+  </data>
+  <data name="ApplyBaselineOverridesToggleMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>يوصى بشدة بتطبيق هذه التجاوزات الاختيارية لتحسين تجربة المستخدم عند استخدام خطوط أساس الأمان من Microsoft.</value>
+  </data>
 </root>
