--- a/Harden System Security/Strings/de-DE/SecurityMeasures.resw
+++ b/Harden System Security/Strings/de-DE/SecurityMeasures.resw
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
     <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
         <xsd:element name="root" msdata:IsDataSet="true">
@@ -520,7 +520,7 @@
 <data name="EnableSvchostMitigationPolicy-Miscellaneous" xml:space="preserve">
     <value>Svchost-Mitigation aktivieren</value>
 </data>
-<data name="DriverLoadPolicy-Miscellaneous" xml:space="preserve">
+<data name="DriverLoadPolicyGoodOnly-Miscellaneous" xml:space="preserve">
     <value>Initialisierungsrichtlinie für Bootstart-Treiber auf Good only festgelegt</value>
 </data>
 <data name="EnableFindMyFiles-Miscellaneous" xml:space="preserve">
@@ -966,5 +966,8 @@
 </data>
 <data name="SetAllNetworkLocationsPublic-WindowsFirewall" xml:space="preserve">
     <value>Setzen Sie das Netzwerkprofil aller Verbindungen auf Öffentlich. Ein öffentliches Netzwerk bedeutet geringeres Vertrauen gegenüber anderen Netzwerkgeräten.</value>
+</data>
+<data name="DriverLoadPolicyGoodAndUnknown-Miscellaneous" xml:space="preserve">
+    <value>Initialisierungsrichtlinie für Boot-Start-Treiber auf „Gut“ und „Unbekannt“ festgelegt</value>
 </data>
 </root>
