--- a/Harden System Security/Strings/el-GR/SecurityMeasures.resw
+++ b/Harden System Security/Strings/el-GR/SecurityMeasures.resw
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
     <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
         <xsd:element name="root" msdata:IsDataSet="true">
@@ -520,7 +520,7 @@
 <data name="EnableSvchostMitigationPolicy-Miscellaneous" xml:space="preserve">
     <value>Ενεργοποίηση Μετριασμού Svchost</value>
 </data>
-<data name="DriverLoadPolicy-Miscellaneous" xml:space="preserve">
+<data name="DriverLoadPolicyGoodOnly-Miscellaneous" xml:space="preserve">
     <value>Πολιτική Αρχικοποίησης Οδηγού Εκκίνησης ορισμένη μόνο σε Καλούς</value>
 </data>
 <data name="EnableFindMyFiles-Miscellaneous" xml:space="preserve">
@@ -966,5 +966,8 @@
 </data>
 <data name="SetAllNetworkLocationsPublic-WindowsFirewall" xml:space="preserve">
     <value>Ορίστε το προφίλ δικτύου όλων των συνδέσεων σε Δημόσιο. Το δημόσιο δίκτυο σημαίνει μειωμένη εμπιστοσύνη προς άλλες συσκευές στο δίκτυο.</value>
+</data>
+<data name="DriverLoadPolicyGoodAndUnknown-Miscellaneous" xml:space="preserve">
+    <value>Η πολιτική προετοιμασίας προγραμμάτων οδήγησης εκκίνησης ορίστηκε σε Καλά και Άγνωστα</value>
 </data>
 </root>
