--- a/Harden System Security/Strings/he-IL/Resources.resw
+++ b/Harden System Security/Strings/he-IL/Resources.resw
@@ -4895,5 +4895,21 @@
   <data name="OptionalWindowsFeatures_IncludeEnablements" xml:space="preserve">
     <comment>Protection Sub-Category</comment>
     <value>בנוסף לתכונות וליכולות שהומלץ להסיר, כלול גם את אלו שהומלץ להפעיל.</value>
-  </data>  
+  </data>
+    <data name="ProtectSubCategory_MiscellaneousConfigurations_DriverLoadPolicyGoodOnly" xml:space="preserve">
+    <comment>Protection Sub-Category</comment>
+    <value>אפשר טעינה של מנהלי התקן במצב ליבה מסוג Good בלבד לשיפור האבטחה.</value>
+  </data>
+  <data name="MiscellaneousConfigurations_MiscellaneousConfigurations_DriverLoadPolicyGoodOnly" xml:space="preserve">
+    <value>ייתכן שתוכנות אנטי-וירוס של צד שלישי או סוגים אחרים של מנהלי התקן מצד שלישי לא יהיו תואמים. במקרה של אי-תאימות, המערכת תיתקל בבעיה בעת האתחול.</value>
+  </data>
+  <data name="ApplyBaselineOverridesToggleMenuFlyoutItem.Text" xml:space="preserve">
+    <value>החל עקיפות אופציונליות</value>
+  </data>
+  <data name="ApplyBaselineOverridesToggleMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>מומלץ מאוד להחיל עקיפות אופציונליות אלו לשיפור חוויית המשתמש בעת שימוש בקווי בסיס לאבטחה של Microsoft.</value>
+  </data>
+  <data name="ApplyBaselineOverridesToggleMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>מומלץ מאוד להחיל עקיפות אופציונליות אלו לשיפור חוויית המשתמש בעת שימוש בקווי בסיס לאבטחה של Microsoft.</value>
+  </data>
 </root>
