--- a/Harden System Security/Strings/ml-IN/SecurityMeasures.resw
+++ b/Harden System Security/Strings/ml-IN/SecurityMeasures.resw
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
     <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
         <xsd:element name="root" msdata:IsDataSet="true">
@@ -520,7 +520,7 @@
 <data name="EnableSvchostMitigationPolicy-Miscellaneous" xml:space="preserve">
     <value>Svchost ലഘൂകരണം പ്രവർത്തനക്ഷമമാക്കുക</value>
 </data>
-<data name="DriverLoadPolicy-Miscellaneous" xml:space="preserve">
+<data name="DriverLoadPolicyGoodOnly-Miscellaneous" xml:space="preserve">
     <value>ബൂട്ട് ഡ്രൈവർ ആരംഭിക്കൽ നയം നല്ലതിലേക്ക് മാത്രം സജ്ജമാക്കുക</value>
 </data>
 <data name="EnableFindMyFiles-Miscellaneous" xml:space="preserve">
@@ -966,5 +966,8 @@
 </data>
 <data name="SetAllNetworkLocationsPublic-WindowsFirewall" xml:space="preserve">
     <value>എല്ലാ കണക്ഷനുകളുടെയും നെറ്റ്‌വർക്ക് പ്രൊഫൈൽ പൊതു ആയി ക്രമീകരിക്കുക. പൊതു നെറ്റ്‌വർക്ക് മറ്റ് നെറ്റ്‌വർക്ക് ഉപകരണങ്ങളോടുള്ള വിശ്വാസം കുറവാണെന്നർത്ഥമാണ്.</value>
+</data>
+<data name="DriverLoadPolicyGoodAndUnknown-Miscellaneous" xml:space="preserve">
+    <value>ബൂട്ട്-സ്റ്റാർട്ട് ഡ്രൈവർ ഇനീഷ്യലൈസേഷൻ പോളിസി 'നല്ലത്', 'അജ്ഞാതം' എന്നിങ്ങനെ സജ്ജീകരിച്ചു</value>
 </data>
 </root>
